compiler/w_session/tests/errors/basic_adder.w
fn main(): u32 {
    1 + 1
}